added CredSSP WinRM

--- a/ansible/win2016std.yml
+++ b/ansible/win2016std.yml
@@ -10,9 +10,8 @@
         state: present
       with_items:
         - { name: 'notepadplusplus.install', version: '7.3' }
-        - { name: 'googlechrome', version: '62.0.3202.62' }
+        - { name: 'googlechrome', version: '62.0.3202.89' }
         - { name: '7zip.install', version: '16.4.0.20170506' }
-        - { name: 'vmware-horizon-client', version: '4.4.0' }
         - { name: 'vmware-tools', version: '10.1.15.6677369' }
 
     - name: Disable autologin
@@ -21,3 +20,6 @@
         name: AutoAdminLogon
         data: 0
         type: string
+
+    - name: Enable CredSSP with WinRM
+      win_shell: Enable-WSManCredSSP -Role Server -Force
