added reboot logic to windows update script

--- a/ansible/win10ent.yml
+++ b/ansible/win10ent.yml
@@ -18,7 +18,7 @@
         data: 1
         type: string
 
-    - name: Enable autologin
+    - name: Enable autologin Password
       win_regedit:
         path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
         name: DefaultPassword
