--- a/ansible/win10_baseline.yml
+++ b/ansible/win10_baseline.yml
@@ -8,3 +8,17 @@
         name: "{{ item.name }}"
         state: present
       with_items: "{{ app_data }}"
+
+    - name: Enable autologin
+      win_regedit:
+        path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+        name: AutoAdminLogon
+        data: 1
+        type: string
+
+    - name: Enable autologin Password
+      win_regedit:
+        path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+        name: DefaultPassword
+        data: runner
+        type: string
